[package]
name = "mctools"
version = "0.0.0"
edition = "2021"

license-file = "LICENSE.txt"
description = "TODO"
# homepage = "https://example.com"
# documentation = "https://example.com"
repository = "https://github.com/ClintFlames/mctools"
# readme = "README.md"

# keywords = ["minecraft"]
# categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
