[package]
name = "mctools"
version = "0.1.0"
edition = "2021"

license-file = "LICENSE.txt"
description = "A Rust library that contains some Minecraft tools."
# homepage = "https://example.com"
documentation = "https://docs.rs/mctools/latest/mctools/"
repository = "https://github.com/ClintFlames/mctools"
readme = "README.md"

keywords = ["minecraft"]
categories = ["game-development"]

# https://doc.rust-lang.org/cargo/reference/publishing.html
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png="0.17.13"
